# private-dns-zone

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DOCS_SETUP.md  Dockerfile.dns-client  ENV_GUIDE.md  README.md  devbox.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docs-requirements.txt  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-docs.yml
config/: named.conf  named.conf.default-zones  named.conf.keys  named.conf.local
docs/: README.md  components.md  index.md  requirements.md
docs/assets/javascripts/: mermaid.js
docs/assets/stylesheets/: extra.css
docs/design/: architecture.md  tsig-security.md
docs/development/: devbox-setup.md  dns-client-testing.md  quality-management.md  release-management.md
docs/getting-started/: installation.md  overview.md  quick-start.md
docs/overrides/partials/: source-file.html
docs/use-cases/: dnscontrol.md  external-dns.md  octodns.md  overview.md  uc-000-overview.md  uc-001-external-dns.md  uc-002-dnscontrol.md  uc-003-octodns.md
docs/user-guide/: basic-operations.md
kubernetes/: EXTERNAL_DNS_GUIDE.md  external-dns-values.yaml  install-external-dns.sh
kubernetes/examples/: test-services.yaml
scripts/: env-manager.sh  release.sh  setup-pre-commit.sh  update-dns.sh
zones/: db.192.168.1  db.dev.local  db.example.local  db.k8s.local  db.test.local
